[gd_scene load_steps=5 format=3 uid="uid://dslvs2eb7apjm"]

[ext_resource type="Script" path="res://Src/defaultLobbyListItem.gd" id="1_hsjne"]
[ext_resource type="StyleBox" uid="uid://dvs4ap0mdc3ut" path="res://Resources/Prototype/button-normal.tres" id="2_12i6v"]
[ext_resource type="StyleBox" uid="uid://b3fs8writruqt" path="res://Resources/Prototype/button-hover.tres" id="3_5fwax"]
[ext_resource type="StyleBox" uid="uid://cku7nkflrk7k4" path="res://Resources/Prototype/button-pressed.tres" id="4_xg6g6"]

[node name="DefaultLobbyListItem" type="Control"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 3
anchor_top = 0.481
anchor_right = 1.0
anchor_bottom = 0.519
offset_top = 12.312
offset_bottom = -12.312
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hsjne")

[node name="DefaultLobbyHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LobbyID" type="Label" parent="DefaultLobbyHBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "DefaultLobby"
clip_text = true

[node name="Players" type="Label" parent="DefaultLobbyHBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "8/2"
horizontal_alignment = 1

[node name="Status" type="Label" parent="DefaultLobbyHBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Open"
horizontal_alignment = 1

[node name="Join" type="Button" parent="DefaultLobbyHBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("2_12i6v")
theme_override_styles/hover = ExtResource("3_5fwax")
theme_override_styles/pressed = ExtResource("4_xg6g6")
text = "Join"

[connection signal="pressed" from="DefaultLobbyHBox/Join" to="." method="_on_join_pressed"]
